added version to setup-python

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
       - uses: golangci/golangci-lint-action@v3
         with:
           # Require: The version of golangci-lint to use.
