tests added to workflow

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           go mod tidy
           git diff --exit-code go.mod
+      - name: Unit tests
+        run: go test ./... -v -covermode=count
   pre-commit:
     runs-on: ubuntu-latest
     steps:
