--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -23,7 +23,19 @@ jobs:
           git diff --exit-code go.mod
       - name: Unit tests
         run: go test ./... -v -covermode=count
+  integration:
+    needs: [go-mod]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build
+        run: go build -o ./antia
+      - name: Run the API and integration tests
+        run: |
+          ./antia &
+          sleep 1
+          go test ./... -v -covermode=count -tags integration
   pre-commit:
+    needs: [integration]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
