--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
   -   repo: https://github.com/dnephin/pre-commit-golang
       rev: v0.4.0
       hooks:
-        -   id: go-imports
-        -   id: golangci-lint
-        -   id: go-unit-tests
+        - id: go-fmt
+        - id: go-mod-tidy
+        - id: go-imports
+        - id: golangci-lint
+        - id: go-unit-tests
