--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -33,10 +33,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build
-        run: go build -o ./antia ./cmd/server/
+        run: |
+          go build -o ./antia ./cmd/server/
+          cp -r ./cmd/server/templates ./
+          cp ./env.app ./
       - name: Run the API and integration tests
         run: |
-          ./antia &
+          ./antia -config ./ &
           sleep 1
           go test ./... -v -covermode=count -tags integration
   pre-commit:
